--- a/app-about-company.properties
+++ b/app-about-company.properties
@@ -4,8 +4,8 @@ text.copyright=o7planning.org
 # DATABASE
 # ===============================
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+db_driver=com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/claimdb
-spring.datasource.username=root
-spring.datasource.password=password
+db_url=jdbc:mysql://localhost:3306/claimdb
+db_username=root
+db_password=password
