--- a/app-about-company.properties
+++ b/app-about-company.properties
@@ -8,4 +8,4 @@ db_driver=com.mysql.jdbc.Driver
 
 db_url=jdbc:mysql://localhost:3306/claimdb
 db_username=root
-db_password=password
+db_password=ROOT
