--- a/app-about-company.properties
+++ b/app-about-company.properties
@@ -6,6 +6,6 @@ text.copyright=o7planning.org
 
 db_driver=com.mysql.jdbc.Driver
 
-db_url=jdbc:mysql://localhost:3306/claimdb
+db_url=jdbc:mysql://localhost:3306/testdb
 db_username=root
 db_password=ROOT
