--- a/app-about-company.properties
+++ b/app-about-company.properties
@@ -9,4 +9,4 @@ db_driver=com.mysql.jdbc.Driver
 db_url=jdbc:mysql://localhost:3306/testdb
 db_username=root
 db_password=ROOT
-username=krishanu
+test_username=krishanu
